# internal-cheat-template

./: .gitmodules  CMakeLists.txt  README.md
dependencies/submodules/: CMakeLists.txt
dll-injector/: CMakeLists.txt
dll-injector/src/: main.cpp
patches/: polyhook-2.patch
stub-executable/: CMakeLists.txt
stub-executable/src/: main.cpp
template-dll/: CMakeLists.txt
template-dll/src/: dllmain.cpp
